deployment/k8s/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-gw
  annotations:
    networking.gke.io/certmap: gcp-saidsef-co-uk
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
    # tls:
    #   mode: Terminate
    #   options:
    #     networking.gke.io/pre-shared-certs: gcp-saidsef-co-uk
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: Gateway
# metadata:
#   name: external-gw-ssl
# spec:
#   gatewayClassName: gke-l7-regional-external-managed
#   listeners:
#   - name: https
#     protocol: HTTPS
#     port: 443
#     allowedRoutes:
#       kinds:
#       - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect
spec:
  parentRefs:
  - kind: Gateway
    name: external-gw
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 302
